# eMail

./: .gitignore  .gitmodules  Makefile.in  README  README.md  VERSION  check_strftime.sh  confdefs.h  configure  configure.ac  configure.in  configure.in.dist  email.1.in  email.conf  email.sig  email.spec  index.html  install.sh  make_dist  uninstall.sh
debian/: .gitignore  build-ppa.sh  changelog  control  rules  watch
include/: addr_parse.h  addy_book.h  conf.h  config.h.in  email.h  error.h  execgpg.h  file_io.h  message.h  mimeutils.h  processmail.h  progress_bar.h  remotesmtp.h  sig_file.h  smtpcommands.h  utils.h
src/: Makefile.in  addr_parse.c  addy_book.c  conf.c  email.c  error.c  execgpg.c  file_io.c  message.c  mimeutils.c  processmail.c  progress_bar.c  remotesmtp.c  sig_file.c  smtpcommands.c  utils.c
